--- a/sampleTask/index.html
+++ b/sampleTask/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>This is my sample html file </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, necessitatibus!</p>
 </body>
 </html>
